# BitcoinSearch

./: README.md  optimized-readme.md
_workspace_bitcoin-finder-clean-package/: GUIDE.md  INSTALL.md  README.md  SUMMARY.md
_workspace_bitcoin-finder-clean-package/bitcoin-finder-fixed/: Cargo.toml  config.json  wordlist.txt
_workspace_bitcoin-finder-clean-package/bitcoin-finder-fixed/src/: main.rs  main_fixed.rs  main_fixed2.rs
_workspace_bitcoin-finder-clean-package/examples/: advanced_search.sh  advanced_wordlist.txt  basic_config.json  basic_search.sh  basic_wordlist.txt  sample_addresses.txt  service_config.json  service_mode.sh
optimized/: README.md  config.json  main.rs  wordlist.txt
